<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".counter.CounterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/default_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/counter"
                android:textSize="36sp" app:layout_constraintStart_toEndOf="@+id/minus_button"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/plus_button"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/decrement_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:id="@+id/minus_button"
                app:layout_constraintBottom_toBottomOf="@+id/counter"
        />
        <Button
                android:text="@string/increment_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_button"
                app:layout_constraintBottom_toBottomOf="@+id/counter" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <TextView
                android:text="@string/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView2" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/counter" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="30sp" android:textStyle="bold"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>