<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent" android:layout_height="match_parent"
             tools:context=".action.ActionListFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/action_item" android:clipToPadding="false" android:id="@+id/action_recycler"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="parent"/>

</FrameLayout>