<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        app:contentPadding="16dp"
        app:cardUseCompatPadding="false"
        android:id="@+id/action_item_card">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/default_state"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" android:id="@+id/action_item_text"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
