...
            />
            <Button
                    android:text="@string/save_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/save_counter"
                    app:layout_constraintTop_toBottomOf="@+id/fragment" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="32dp" android:onClick="saveState"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

...
